<?xml version="1.0"?>
<package format="2">
  <name>rtabmap_conversions</name>
  <version>0.21.1</version>
  <description>RTAB-Map's conversions package. This package can be used to convert rtabmap_msgs's msgs into RTAB-Map's library objects.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <author>Mathieu Labbe</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/introlab/rtabmap_ros/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>rtabmap</depend>
  <depend>rtabmap_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

</package>
