<?xml version="1.0"?>
<package format="2">
  <name>rtabmap_legacy</name>
  <version>0.1.0</version>
  <description>RTAB-Map's legacy launch files.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <author>Mathieu Labbe</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/introlab/rtabmap_ros/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>rtabmap_conversions</depend>
  <depend>rtabmap_msgs</depend>

</package>
