<?xml version="1.0"?>
<package format="2">
  <name>rtabmap_odom</name>
  <version>0.21.5</version>
  <description>RTAB-Map's odometry package.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <author>Mathieu Labbe</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/introlab/rtabmap_ros/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>laser_geometry</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rtabmap_conversions</depend>
  <depend>rtabmap_msgs</depend>
  <depend>rtabmap_util</depend>
  <depend>rtabmap_sync</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
