<?xml version="1.0"?>
<package format="2">
  <name>rtabmap_python</name>
  <version>0.21.5</version>
  <description>RTAB-Map's python package.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <author>Mathieu Labbe</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/introlab/rtabmap_ros/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
